@@ -1,3 +1,8 @@
+2003-09-02  Thomas Vander Stichele <thomas at apestaart dot org>
+
+        * data/Makefile.am: print warning and continue when failing to install
+	  gconf schemas
+
  2003-09-02  Bastien Nocera  <hadess@hadess.net>
   
 	* data/sound-juicer.glade: set the extract buttons to be disabled by default
